src/test/ui/nll/lub-if.nll.stderr
error: lifetime may not live long enough
  --> $DIR/lub-if.rs:28:9
   |
LL | pub fn opt_str2<'a>(maybestr: &'a Option<String>) -> &'static str {
   |                 -- lifetime `'a` defined here
...
LL |         s
   |         ^ returning this value requires that `'a` must outlive `'static`

error: lifetime may not live long enough
  --> $DIR/lub-if.rs:35:9
   |
LL | pub fn opt_str3<'a>(maybestr: &'a Option<String>) -> &'static str {
   |                 -- lifetime `'a` defined here
...
LL |         s
   |         ^ returning this value requires that `'a` must outlive `'static`

error: aborting due to 2 previous errors

